[symfony fisrt-step] continuing

--- a/templates/partial/_header.html.twig
+++ b/templates/partial/_header.html.twig
@@ -6,8 +6,8 @@
                 Bases</a>
         </div>
         <div class=" nav-part nav-right">
-            <a href="{{ path('app_about') }}" class="{{ app.request.get('_route') == 'app_about' ? 'active' : '' }}">Page
-                about</a>
+            <a href="{{ path('app_brands') }}" class="{{ app.request.get('_route') == 'app_brands' ? 'active' : '' }}">Brands</a>
+            <a href="{{ path('app_about') }}" class="{{ app.request.get('_route') == 'app_about' ? 'active' : '' }}">about</a>
             <a href="" class="">Pannier (0)</a>
         </div>
     </nav>
