--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,7 +13,7 @@
                     <h2 class="product-title">{{ product.name }}</h2>
                     <div class="product-details">
                         <a href="{{ path('app_product_details', {'id' : product.id}) }}">Plus de détails</a>
-                        <div class="product-price">{{ product.price | round(2) | number_format(2)}}<span class="currency">€</span></div>
+                        <div class="product-price">{{ product.price | round(2, 'floor') | number_format(2) }}<span class="currency">€</span></div>
                     </div>
                 </div>
             </div>
