[symfony first-step] add https/placeholder images

--- a/templates/brand/brandDetails.html.twig
+++ b/templates/brand/brandDetails.html.twig
@@ -10,7 +10,9 @@
     </h1>
 
     <div class="page-content">
-        <div class="brand-img"></div>
+        <div class="brand-img">
+            <img src="https://via.placeholder.com/400x300.png/005544/010101?text=Générateur+d'images">
+        </div>
         <div class="brand-details">
             <label>Headquarter's address :</label><br>
             <div class="address">
