--- a/templates/brand/brands.html.twig
+++ b/templates/brand/brands.html.twig
@@ -9,7 +9,9 @@
     <div class="page-content brands">
         {% for brand in brands %}
             <div class="brand-card">
-                <div class="card-img"></div>
+                <div class="card-img">
+                    <img src="https://via.placeholder.com/200x70/445500/f0f0f0">
+                </div>
                 <div class="card-content">
                     <h2 class="brand-title">{{ brand.name }}</h2>
                     <div class="brand-details">
