--- a/templates/product/details.html.twig
+++ b/templates/product/details.html.twig
@@ -15,7 +15,9 @@
     </div>
 
     <div class="page-content">
-        <div class="product-img"></div>
+        <div class="product-img">
+            <img src="https://via.placeholder.com/400x300.png/005544/010101?text=Image produit">
+        </div>
         <div class="product-details">
             <div class="description">
                 {{ product.description }}
