[dev] few modifications

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
 <body>
 {% block body %}
     {% block header %}
-        {% include('partial/_header.html.twig') %}
+        {% include('partial/_header') %}
     {% endblock %}
 
     <main class="{% block main_class %}{% endblock %}">
